--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
   background-color: #f5f5f5;
 }
 
@@ -11,20 +11,22 @@ table {
 }
 
 .container {
-  width: 16rem;
+  width: 15rem;
   margin: 0 auto;
   background-color: white;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 14px;
   text-align: center;
-  margin-top: 6rem;
-  margin-bottom: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
 }
+
 .container-input {
   display: flex;
   flex-direction: column;
-  width: 10.2rem;
+  width: 10rem;
+  height: 16rem;
   margin: 0 auto;
 }
 .label {
@@ -57,6 +59,9 @@ h1 {
   margin: auto;
   padding-bottom: 1rem;
 }
+.png {
+  width: 4rem;
+}
 
 .input-container {
   display: flex;
@@ -67,6 +72,8 @@ h1 {
 .input {
   padding: 0.4rem;
   width: 8.6rem;
+  border-radius: 10px;
+  border-color: #0057b371;
 }
 
 button {
@@ -137,7 +144,6 @@ td {
 }
 
 @media only screen and (max-width: 480px) {
-  /* CSS styles for phones */
   .container {
     width: 75%;
     margin-top: 3rem;
@@ -145,9 +151,7 @@ td {
   .illustration {
     width: 16rem;
   }
-  td {
-    /* width: 14rem; */
-  }
+
   #car-make,
   #car-model,
   #car-year {
@@ -157,12 +161,9 @@ td {
     width: 22rem;
   }
   .container-input {
-    /* flex-direction: column; */
     align-items: center;
   }
-  input {
-    /* margin-bottom: 10px; */
-  }
+
   .note {
     padding: 0rem;
     width: 20rem;
